-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
Qt Creator 3.0.0-rc1
-
None
- Open project src/plugins/imageviewer/imageviewer.pro
- Click form imageviewertoolbar.ui
- Observe crash:
Program received signal SIGSEGV, Segmentation fault. 0x00007fffe30e9932 in QScopedPointer<QtResourceSetPrivate, QScopedPointerDeleter<QtResourceSetPrivate> >::operator-> (this=0x0) at ../../../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:112 112 Q_ASSERT(d); 154where >&"where\n" >~"#0 0x00007fffe32f2932 in QScopedPointer<QtResourceSetPrivate, QScopedPointerDeleter<QtResourceSetPrivate> >::operator-> (this=0x0) at ../../../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:112\n" >~"#1 0x00007fffe32ef7c8 in QtResourceSet::activeQrcPaths (this=0x0) at shared/qtresourcemodel.cpp:149\n" >~"#2 0x00007fffe3856357 in Designer::Internal::ResourceHandler::ensureInitialized (this=0x34cdb60) at resourcehandler.cpp:115\n" >~"#3 0x00007fffe38564ea in Designer::Internal::ResourceHandler::updateResources (this=0x34cdb60) at resourcehandler.cpp:132\n" >~"#4 0x00007fffe385c6ea in Designer::Internal::ResourceHandler::qt_static_metacall (_o=0x34cdb60, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fffffffa220) at .moc/debug-shared/moc_resourcehandler.cpp:49\n" >~"#5 0x00007ffff6475c20 in QMetaObject::activate (sender=0x3418be0, m=0x7fffecb01ea0, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3547\n" >~"#6 0x00007fffec83257d in Core::IDocument::changed (this=0x3418be0) at .moc/debug-shared/moc_idocument.cpp:104\n" >~"#7 0x00007fffe383db0e in Designer::Internal::FormWindowFile::updateIsModified (this=0x3418be0) at formwindowfile.cpp:118\n" >~"#8 0x00007fffe385af58 in Designer::Internal::FormWindowFile::qt_static_metacall (_o=0x3418be0, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x7fffffffa3b0) at .moc/debug-shared/moc_formwindowfile.cpp:66\n" >~"#9 0x00007ffff6475c20 in QMetaObject::activate (sender=0x34cb780, m=0x7fffe37fc740, local_signal_index=11, argv=0x0) at kernel/qobject.cpp:3547\n" >~"#10 0x00007fffe3314c99 in QDesignerFormWindowInterface::changed (this=0x34cb780) at .moc/debug-shared/moc_abstractformwindow.cpp:240\n" >~"#11 0x00007fffe3314627 in QDesignerFormWindowInterface::qt_static_metacall (_o=0x34cb780, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0x7fffffffa540) at .moc/debug-shared/moc_abstractformwindow.cpp:104\n" >~"#12 0x00007ffff6475c20 in QMetaObject::activate (sender=0x34cb820, m=0x7fffe2fe4c80, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3547\n" >~"#13 0x00007fffe2cbfef5 in qdesigner_internal::QDesignerUndoStack::changed (this=0x34cb820) at .moc/debug-shared/moc_qdesignerundostack.cpp:101\n" >~"#14 0x00007fffe2c3c63b in qdesigner_internal::QDesignerUndoStack::setDirty (this=0x34cb820, v=true) at ../formeditor/qdesignerundostack.cpp:103\n" >~"#15 0x00007fffe2c4ae44 in qdesigner_internal::FormWindow::setDirty (this=0x34cb780, dirty=true) at ../formeditor/formwindow.cpp:2440\n" >~"#16 0x00007fffe2c4bdf2 in qdesigner_internal::FormWindow::addResourceFile (this=0x34cb780, path=...) at ../formeditor/formwindow.cpp:2651\n" >~"#17 0x00007fffe2c312f8 in qdesigner_internal::QDesignerResource::createResources (this=0x7fffffffb0b0, resources=0x36272d0) at ../formeditor/qdesigner_resource.cpp:2291\n" >~"#18 0x00007fffe30f3af5 in QAbstractFormBuilder::create (this=0x7fffffffb0b0, ui=0x7fffffffac90, parentWidget=0x34cbeb0) at uilib/abstractformbuilder.cpp:258\n" >~"#19 0x00007fffe2c25686 in qdesigner_internal::QDesignerResource::create (this=0x7fffffffb0b0, ui=0x7fffffffac90, parentWidget=0x34cbeb0) at ../formeditor/qdesigner_resource.cpp:780\n" >~"#20 0x00007fffe30f376f in QAbstractFormBuilder::load (this=0x7fffffffb0b0, dev=0x7fffffffb180, parentWidget=0x34cbeb0) at uilib/abstractformbuilder.cpp:221\n" >~"#21 0x00007fffe2c25173 in qdesigner_internal::QDesignerResource::load (this=0x7fffffffb0b0, dev=0x7fffffffb180, parentWidget=0x34cbeb0) at ../formeditor/qdesigner_resource.cpp:744\n" >~"#22 0x00007fffe2c49790 in qdesigner_internal::FormWindow::setContents (this=0x34cb780, dev=0x7fffffffb180) at ../formeditor/formwindow.cpp:2155\n" >~"#23 0x00007fffe2c498a0 in qdesigner_internal::FormWindow::setContents (this=0x34cb780, contents=...) at ../formeditor/formwindow.cpp:2165\n" >~"#24 0x00007fffe383c30e in Designer::FormWindowEditor::open (this=0x341bba0, errorString=0x7fffffffb340, fileName=..., realFileName=...) at formwindoweditor.cpp:157\n" >~"#25 0x00007fffec74a8a7 in Core::EditorManager::openEditor (this=0xb0d640, view=0xb26720, fileName=..., editorId=..., flags=..., newEditor=0x0) at editormanager/editormanager.cpp:1582\n" >~"#26 0x00007fffec749edc in Core::EditorManager::openEditor (fileName=..., editorId=..., flags=..., newEditor=0x0) at editormanager/editormanager.cpp:1472\n" >~"#27 0x00007fffe626466b in ProjectExplorer::Internal::ProjectTreeWidget::openItem (this=0x1c061b0, mainIndex=...) at projecttreewidget.cpp:375\n" >~"#28 0x00007fffe633946c in ProjectExplorer::Internal::ProjectTreeWidget::qt_static_metacall (_o=0x1c061b0, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0x7fffffffb620) at .moc/debug-shared/moc_projecttreewidget.cpp:88\n" >~"#29 0x00007ffff6475c20 in QMetaObject::activate (sender=0x1c06f80, m=0x7ffff7b5c4c0, local_signal_index=3, argv=0x7fffffffb620) at kernel/qobject.cpp:3547\n" >~"#30 0x00007ffff747b457 in QAbstractItemView::activated (this=0x1c06f80, _t1=...) at .moc/debug-shared/moc_qabstractitemview.cpp:361\n" >~"#31 0x00007ffff746f808 in QAbstractItemView::mouseReleaseEvent (this=0x1c06f80, event=0x7fffffffc650) at itemviews/qabstractitemview.cpp:1821\n" >~"#32 0x00007ffff74c0b23 in QTreeView::mouseReleaseEvent (this=0x1c06f80, event=0x7fffffffc650) at itemviews/qtreeview.cpp:1841\n" >~"#33 0x00007ffff6e3ce01 in QWidget::event (this=0x1c06f80, event=0x7fffffffc650) at kernel/qwidget.cpp:8376\n" >~"#34 0x00007ffff730a7f7 in QFrame::event (this=0x1c06f80, e=0x7fffffffc650) at widgets/qframe.cpp:557\n" >~"#35 0x00007ffff73b5b6f in QAbstractScrollArea::viewportEvent (this=0x1c06f80, e=0x7fffffffc650) at widgets/qabstractscrollarea.cpp:1043\n" >~"#36 0x00007ffff746e45e in QAbstractItemView::viewportEvent (this=0x1c06f80, event=0x7fffffffc650) at itemviews/qabstractitemview.cpp:1644\n" >~"#37 0x00007ffff74bd6fc in QTreeView::viewportEvent (this=0x1c06f80, event=0x7fffffffc650) at itemviews/qtreeview.cpp:1252\n" >~"#38 0x00007ffff73b6865 in QAbstractScrollAreaPrivate::viewportEvent (this=0x1c06fc0, event=0x7fffffffc650) at widgets/qabstractscrollarea_p.h:100\n" >~"#39 0x00007ffff73b695e in QAbstractScrollAreaFilter::eventFilter (this=0x1c09210, o=0x1c06770, e=0x7fffffffc650) at widgets/qabstractscrollarea_p.h:116\n" >~"#40 0x00007ffff64578ad in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x619230, receiver=0x1c06770, event=0x7fffffffc650) at kernel/qcoreapplication.cpp:1059\n" >~"#41 0x00007ffff6dd8103 in QApplicationPrivate::notify_helper (this=0x619230, receiver=0x1c06770, e=0x7fffffffc650) at kernel/qapplication.cpp:4558\n" >~"#42 0x00007ffff6dd60b1 in QApplication::notify (this=0x7fffffffd370, receiver=0x1c06770, e=0x7fffffffc650) at kernel/qapplication.cpp:4105\n" >~"#43 0x00007ffff645760e in QCoreApplication::notifyInternal (this=0x7fffffffd370, receiver=0x1c06770, event=0x7fffffffc650) at kernel/qcoreapplication.cpp:949\n" >~"#44 0x00007ffff6ddaffb in QCoreApplication::sendSpontaneousEvent (receiver=0x1c06770, event=0x7fffffffc650) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234\n" >~"#45 0x00007ffff6dd4973 in QApplicationPrivate::sendMouseEvent (receiver=0x1c06770, event=0x7fffffffc650, alienWidget=0x1c06770, nativeWidget=0xd85010, buttonDown=0x7ffff7b8e118, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3171\n" >~"#46 0x00007ffff6e76e72 in QETWidget::translateMouseEvent (this=0xd85010, event=0x7fffffffd130) at kernel/qapplication_x11.cpp:4519\n" >~"#47 0x00007ffff6e73608 in QApplication::x11ProcessEvent (this=0x7fffffffd370, event=0x7fffffffd130) at kernel/qapplication_x11.cpp:3520\n" >~"#48 0x00007ffff6eaa70e in QEventDispatcherX11::processEvents (this=0x6196b0, flags=...) at kernel/qeventdispatcher_x11.cpp:132\n" >~"#49 0x00007ffff6454b5c in QEventLoop::processEvents (this=0x7fffffffd2f0, flags=...) at kernel/qeventloop.cpp:149\n" >~"#50 0x00007ffff6454ce6 in QEventLoop::exec (this=0x7fffffffd2f0, flags=...) at kernel/qeventloop.cpp:204\n" >~"#51 0x00007ffff6457c8e in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1221\n" >~"#52 0x00007ffff6dd5334 in QApplication::exec () at kernel/qapplication.cpp:3823\n" >~"#53 0x000000000040d71c in main (argc=1, argv=0x7fffffffdd88) at main.cpp:527\n" >154^done
Note frame #6, Core::IDocument::changed (this=0x3418be0) at .moc/debug-shared/moc_idocument.cpp:104\n". Something changed caused by the editor refactoring in that area.