Fix crash when loading ui file that uses resource files

Crash introduced with recent refactoring
113c5600c909791ddfea3d424a41d982dcdda6b7

Use the IDocument::filePathChanged signal (instead of changed() which
also fires when modification flag changes) to detect that a ui file
might be in a different project or no project now, and available
resource files changed.

Task-number: QTCREATORBUG-9813
Change-Id: I9b9e26be916ffe7bbf3ab49d934d0e4c111e48df
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>